--- a/src/index.html
+++ b/src/index.html
@@ -5,42 +5,51 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
   </head>
   <body>
-    <header>
-      <nav></nav>
-    </header>
-    <main>
-      <div class="container g-0">
-        <div class="row">
-          <div class="col">
-            <img class="para-titre" src="img/para-titre/portal.webp" alt="" />
-            <img class="para-titre" src="img/para-titre/castle.webp" alt="" />
-            <img
-              class="para-titre"
-              src="img/para-titre/tree-right.webp"
-              alt=""
-            />
-            <img
-              class="para-titre"
-              src="img/para-titre/tree-left.webp"
-              alt=""
-            />
-            <img
-              class="para-titre"
-              src="img/para-titre/midground.webp"
-              alt=""
-            />
-            <img class="para-titre" src="img/para-titre/ysa.webp" alt="" />
-            <img
-              class="para-titre"
-              src="img/para-titre/foreground.webp"
-              alt=""
-            />
-          </div>
-        </div>
-      </div>
-    </main>
+    <section>
+      <img
+        class="para-title para-title-portal"
+        src="img/para-titre/portal.webp"
+        alt=""
+      />
+      <img
+        class="para-title para-title-castle"
+        src="img/para-titre/castle.webp"
+        alt=""
+      />
+      <img
+        class="para-title para-title-tree-r"
+        src="img/para-titre/tree-right.webp"
+        alt=""
+      />
+      <img
+        class="para-title para-title-tree-l"
+        src="img/para-titre/tree-left.webp"
+        alt=""
+      />
+      <img
+        class="para-title para-title-mid"
+        src="img/para-titre/midground.webp"
+        alt=""
+      />
+      <img class="para-title-logo" src="img/para-titre/logo.webp" alt="" />
+      <img
+        class="para-title para-title-ysa"
+        src="img/para-titre/ysa.webp"
+        alt=""
+      />
+      <img
+        class="para-title para-title-fore"
+        src="img/para-titre/foreground.webp"
+        alt=""
+      />
+    </section>
+    <div class="test">
+      <p>haha</p>
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
