debut d'incrustation des cartes

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,34 @@
       />
     </section>
     <div class="test">
-      <p>haha</p>
+      <section class="roi">
+        <img
+          class="para-roi para-roi-bg"
+          src="img/para-roi/roi-background.webp"
+          alt=""
+        />
+        <img
+          class="para-roi para-roi-comic"
+          src="img/para-roi/roi-comicstrip.webp"
+          alt=""
+        />
+        <img
+          class="para-roi para-roi-chara"
+          src="img/para-roi/roi-character.webp"
+          alt=""
+        />
+        <img class="para-roi-txt" src="img/para-roi/roi-txt.webp" alt="" />
+        <img
+          class="para-roi para-roi-gd-t"
+          src="img/para-roi/roi-gradient-top.webp"
+          alt=""
+        />
+        <img
+          class="para-roi para-roi-gd-b"
+          src="img/para-roi/roi-gradient-bottom.webp"
+          alt=""
+        />
+      </section>
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
