rajout des premires cases d'histoire

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
   </head>
   <body>
-    <section>
+    <section class="titre">
       <img
         class="para-title para-title-portal"
         src="img/para-titre/portal.webp"
@@ -47,7 +47,7 @@
         alt=""
       />
     </section>
-    <div class="test">
+    <div class="wrapper-chara">
       <section class="roi">
         <img
           class="para-roi para-roi-bg"
@@ -64,7 +64,11 @@
           src="img/para-roi/roi-character.webp"
           alt=""
         />
-        <img class="para-roi-txt" src="img/para-roi/roi-txt.webp" alt="" />
+        <img
+          class="para-roi para-roi-txt"
+          src="img/para-roi/roi-txt.webp"
+          alt=""
+        />
         <img
           class="para-roi para-roi-gd-t"
           src="img/para-roi/roi-gradient-top.webp"
@@ -73,6 +77,38 @@
         <img
           class="para-roi para-roi-gd-b"
           src="img/para-roi/roi-gradient-bottom.webp"
+          alt=""
+        />
+      </section>
+      <section class="ysa">
+        <img
+          class="para-ysa para-ysa-bg"
+          src="img/para-ysa/ysa-background.webp"
+          alt=""
+        />
+        <img
+          class="para-ysa para-ysa-comic"
+          src="img/para-ysa/ysa-comicstrip.webp"
+          alt=""
+        />
+        <img
+          class="para-ysa para-ysa-chara"
+          src="img/para-ysa/ysa-character.webp"
+          alt=""
+        />
+        <img
+          class="para-ysa para-ysa-txt"
+          src="img/para-ysa/ysa-txt.webp"
+          alt=""
+        />
+        <img
+          class="para-ysa para-ysa-gd-t"
+          src="img/para-ysa/gradient-bottom.webp"
+          alt=""
+        />
+        <img
+          class="para-ysa para-ysa-gd-b"
+          src="img/para-ysa/gradient-bottom.webp"
           alt=""
         />
       </section>
