fini cartes animé

--- a/src/index.html
+++ b/src/index.html
@@ -70,13 +70,13 @@
           alt=""
         />
         <img
-          class="para-roi para-roi-gd-t"
-          src="img/para-roi/roi-gradient-top.webp"
+          class="para-ysa para-ysa-gd-t"
+          src="img/para-ysa/gradient-bottom.webp"
           alt=""
         />
         <img
           class="para-roi para-roi-gd-b"
-          src="img/para-roi/roi-gradient-bottom.webp"
+          src="img/para-ysa/gradient-bottom.webp"
           alt=""
         />
       </section>
@@ -108,6 +108,38 @@
         />
         <img
           class="para-ysa para-ysa-gd-b"
+          src="img/para-ysa/gradient-bottom.webp"
+          alt=""
+        />
+      </section>
+      <section class="epee">
+        <img
+          class="para-epee para-epee-bg"
+          src="img/para-epee/epee-background.webp"
+          alt=""
+        />
+        <img
+          class="para-epee para-epee-comic"
+          src="img/para-epee/epee-comicstrip.webp"
+          alt=""
+        />
+        <img
+          class="para-epee para-epee-chara"
+          src="img/para-epee/epee-character.webp"
+          alt=""
+        />
+        <img
+          class="para-epee para-epee-txt"
+          src="img/para-epee/epee-txt.webp"
+          alt=""
+        />
+        <img
+          class="para-roi para-ysa-gd-t"
+          src="img/para-ysa/gradient-bottom.webp"
+          alt=""
+        />
+        <img
+          class="para-epee para-epee-gd-b"
           src="img/para-ysa/gradient-bottom.webp"
           alt=""
         />
