debut du scroll horizontal

--- a/src/index.html
+++ b/src/index.html
@@ -145,6 +145,28 @@
         />
       </section>
     </div>
+    <div class="slider-mask h-100">
+      <div class="slider-track">
+        <div class="screen screen-1">
+          <img src="img/chara-fond/background-1.webp" alt="" />
+        </div>
+        <div class="screen screen-2">
+          <img src="img/chara-fond/background-2.webp" alt="" />
+        </div>
+        <div class="screen screen-3">
+          <img src="img/chara-fond/background-3.webp" alt="" />
+        </div>
+        <div class="screen screen-4">
+          <img src="img/chara-fond/background-4.webp" alt="" />
+        </div>
+        <div class="screen screen-5">
+          <img src="img/chara-fond/background-5.webp" alt="" />
+        </div>
+        <div class="screen screen-6">
+          <img src="img/chara-fond/background-6.webp" alt="" />
+        </div>
+      </div>
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
