reconversion webp des imagees + test content-visibility

--- a/src/index.html
+++ b/src/index.html
@@ -9,164 +9,212 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
   </head>
   <body>
-    <section class="titre">
-      <img
-        class="para-title para-title-portal"
-        src="img/para-titre/portal.webp"
-        alt=""
-      />
-      <img
-        class="para-title para-title-castle"
-        src="img/para-titre/castle.webp"
-        alt=""
-      />
-      <img
-        class="para-title para-title-tree-r"
-        src="img/para-titre/tree-right.webp"
-        alt=""
-      />
-      <img
-        class="para-title para-title-tree-l"
-        src="img/para-titre/tree-left.webp"
-        alt=""
-      />
-      <img
-        class="para-title para-title-mid"
-        src="img/para-titre/midground.webp"
-        alt=""
-      />
-      <img class="para-title-logo" src="img/para-titre/logo.webp" alt="" />
-      <img
-        class="para-title para-title-ysa"
-        src="img/para-titre/ysa.webp"
-        alt=""
-      />
-      <img
-        class="para-title para-title-fore"
-        src="img/para-titre/foreground.webp"
-        alt=""
-      />
-    </section>
-    <div class="wrapper-chara">
-      <section class="roi">
+    <header>
+      <section class="titre">
         <img
-          class="para-roi para-roi-bg"
-          src="img/para-roi/roi-background.webp"
+          class="para-title para-title-portal"
+          src="img/para-titre/portal.webp"
           alt=""
         />
         <img
-          class="para-roi para-roi-comic"
-          src="img/para-roi/roi-comicstrip.webp"
+          class="para-title para-title-castle"
+          src="img/para-titre/castle.webp"
           alt=""
         />
         <img
-          class="para-roi para-roi-chara"
-          src="img/para-roi/roi-character.webp"
+          class="para-title para-title-tree-r"
+          src="img/para-titre/tree-right.webp"
           alt=""
         />
         <img
-          class="para-roi para-roi-txt"
-          src="img/para-roi/roi-txt.webp"
+          class="para-title para-title-tree-l"
+          src="img/para-titre/tree-left.webp"
           alt=""
         />
         <img
-          class="para-ysa para-ysa-gd-t"
-          src="img/para-ysa/gradient-bottom.webp"
+          class="para-title para-title-mid"
+          src="img/para-titre/midground.webp"
+          alt=""
+        />
+        <img class="para-title-logo" src="img/para-titre/logo.webp" alt="" />
+        <img
+          class="para-title para-title-ysa"
+          src="img/para-titre/ysa.webp"
           alt=""
         />
         <img
-          class="para-roi para-roi-gd-b"
-          src="img/para-ysa/gradient-bottom.webp"
+          class="para-title para-title-fore"
+          src="img/para-titre/foreground.webp"
           alt=""
         />
       </section>
-      <section class="ysa">
-        <img
-          class="para-ysa para-ysa-bg"
-          src="img/para-ysa/ysa-background.webp"
-          alt=""
-        />
-        <img
-          class="para-ysa para-ysa-comic"
-          src="img/para-ysa/ysa-comicstrip.webp"
-          alt=""
-        />
-        <img
-          class="para-ysa para-ysa-chara"
-          src="img/para-ysa/ysa-character.webp"
-          alt=""
-        />
-        <img
-          class="para-ysa para-ysa-txt"
-          src="img/para-ysa/ysa-txt.webp"
-          alt=""
-        />
-        <img
-          class="para-ysa para-ysa-gd-t"
-          src="img/para-ysa/gradient-bottom.webp"
-          alt=""
-        />
-        <img
-          class="para-ysa para-ysa-gd-b"
-          src="img/para-ysa/gradient-bottom.webp"
-          alt=""
-        />
-      </section>
-      <section class="epee">
-        <img
-          class="para-epee para-epee-bg"
-          src="img/para-epee/epee-background.webp"
-          alt=""
-        />
-        <img
-          class="para-epee para-epee-comic"
-          src="img/para-epee/epee-comicstrip.webp"
-          alt=""
-        />
-        <img
-          class="para-epee para-epee-chara"
-          src="img/para-epee/epee-character.webp"
-          alt=""
-        />
-        <img
-          class="para-epee para-epee-txt"
-          src="img/para-epee/epee-txt.webp"
-          alt=""
-        />
-        <img
-          class="para-roi para-ysa-gd-t"
-          src="img/para-ysa/gradient-bottom.webp"
-          alt=""
-        />
-        <img
-          class="para-epee para-epee-gd-b"
-          src="img/para-ysa/gradient-bottom.webp"
-          alt=""
-        />
-      </section>
-    </div>
-    <div class="slider-mask h-100">
-      <div class="slider-track">
-        <div class="screen screen-1">
-          <img src="img/chara-fond/background-1.webp" alt="" />
-        </div>
-        <div class="screen screen-2">
-          <img src="img/chara-fond/background-2.webp" alt="" />
-        </div>
-        <div class="screen screen-3">
-          <img src="img/chara-fond/background-3.webp" alt="" />
-        </div>
-        <div class="screen screen-4">
-          <img src="img/chara-fond/background-4.webp" alt="" />
-        </div>
-        <div class="screen screen-5">
-          <img src="img/chara-fond/background-5.webp" alt="" />
-        </div>
-        <div class="screen screen-6">
-          <img src="img/chara-fond/background-6.webp" alt="" />
+    </header>
+    <main>
+      <div class="wrapper-chara">
+        <section class="roi">
+          <img
+            class="para-roi para-roi-bg"
+            src="img/para-roi/roi-background.webp"
+            alt=""
+          />
+          <img
+            class="para-roi para-roi-comic"
+            src="img/para-roi/roi-comicstrip.webp"
+            alt=""
+          />
+          <img
+            class="para-roi para-roi-chara"
+            src="img/para-roi/roi-character.webp"
+            alt=""
+          />
+          <img
+            class="para-roi para-roi-txt"
+            src="img/para-roi/roi-txt.webp"
+            alt=""
+          />
+          <img
+            class="para-ysa para-ysa-gd-t"
+            src="img/para-ysa/gradient-bottom.webp"
+            alt=""
+          />
+          <img
+            class="para-roi para-roi-gd-b"
+            src="img/para-ysa/gradient-bottom.webp"
+            alt=""
+          />
+        </section>
+        <section class="ysa">
+          <img
+            class="para-ysa para-ysa-bg"
+            src="img/para-ysa/ysa-background.webp"
+            alt=""
+          />
+          <img
+            class="para-ysa para-ysa-comic"
+            src="img/para-ysa/ysa-comicstrip.webp"
+            alt=""
+          />
+          <img
+            class="para-ysa para-ysa-chara"
+            src="img/para-ysa/ysa-character.webp"
+            alt=""
+          />
+          <img
+            class="para-ysa para-ysa-txt"
+            src="img/para-ysa/ysa-txt.webp"
+            alt=""
+          />
+          <img
+            class="para-ysa para-ysa-gd-t"
+            src="img/para-ysa/gradient-bottom.webp"
+            alt=""
+          />
+          <img
+            class="para-ysa para-ysa-gd-b"
+            src="img/para-ysa/gradient-bottom.webp"
+            alt=""
+          />
+        </section>
+        <section class="epee">
+          <img
+            class="para-epee para-epee-bg"
+            src="img/para-epee/epee-background.webp"
+            alt=""
+          />
+          <img
+            class="para-epee para-epee-comic"
+            src="img/para-epee/epee-comicstrip.webp"
+            alt=""
+          />
+          <img
+            class="para-epee para-epee-chara"
+            src="img/para-epee/epee-character.webp"
+            alt=""
+          />
+          <img
+            class="para-epee para-epee-txt"
+            src="img/para-epee/epee-txt.webp"
+            alt=""
+          />
+          <img
+            class="para-roi para-ysa-gd-t"
+            src="img/para-ysa/gradient-bottom.webp"
+            alt=""
+          />
+          <img
+            class="para-epee para-epee-gd-b"
+            src="img/para-ysa/gradient-bottom.webp"
+            alt=""
+          />
+        </section>
+      </div>
+      <div class="slider-mask h-100">
+        <div class="slider-track">
+          <div class="screen screen-1 screen-bg">
+            <img
+              class="scroll-ysa"
+              src="img/chara-fond/background-1.webp"
+              alt=""
+            />
+          </div>
+          <div class="screen screen-2">
+            <img
+              class="scroll-ysa screen-bg"
+              src="img/chara-fond/background-2.webp"
+              alt=""
+            />
+          </div>
+          <div class="screen screen-3">
+            <img
+              class="scroll-ysa screen-bg"
+              src="img/chara-fond/background-3.webp"
+              alt=""
+            />
+          </div>
+          <div class="screen screen-4">
+            <img
+              class="scroll-ysa screen-bg"
+              src="img/chara-fond/background-4.webp"
+              alt=""
+            />
+          </div>
         </div>
       </div>
-    </div>
+      <div class="container buy-container">
+        <div class="row">
+          <div class="col-6">
+            <img class="buy-logo" src="img/livre/livre-logo.webp" alt="" />
+            <h3 class="buy-title">Maintenant En Librairie</h3>
+            <p class="buy-txt">
+              Après « Le Mystère du monde quantique » et « Sous Terre », Mathieu
+              Burniat revient avec « Furieuse », une pure fiction scénarisée par
+              Geoffroy Monde (« Poussière », « Comment réussir » et « De rien
+              »). Le roi Arthur, celui de la légende ? Un vieil ivrogne décrépit
+              qui passe ses journées vautré sur son trône.
+            </p>
+            <a class="buy-button" href=""> Vers la boutique </a>
+          </div>
+          <div class="col-6">
+            <img class="buy-livre" src="img/livre/livre-furieuse.webp" alt="" />
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <img
+              class="footer-logo"
+              src="img/footer/footer-dargaud-logo.webp"
+              alt=""
+            />
+            <a class="footer-links" href="">CONDITIONS GÉNÉRALES </a>
+            <a class="footer-links" href="">POLITIQUE DE CONFIDENTIALITÉ</a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
