regler scroll horizontal

--- a/src/index.html
+++ b/src/index.html
@@ -150,10 +150,25 @@
       </div>
       <div class="slider-mask h-100">
         <div class="slider-track">
-          <div class="screen screen-1 screen-bg">
+          <div class="screen screen-1">
             <img
-              class="scroll-ysa"
+              class="scroll-ysa screen-bg"
               src="img/chara-fond/background-1.webp"
+              alt=""
+            />
+            <img
+              class="chara-ysa ysa-tree-l"
+              src="img/chara-ysa/ysa-tree-left.webp"
+              alt=""
+            />
+            <img
+              class="chara-ysa ysa-horse"
+              src="img/chara-ysa/ysa-horse.webp"
+              alt=""
+            />
+            <img
+              class="chara-ysa ysa-spacer"
+              src="img/chara-ysa/ysa-spacer.webp"
               alt=""
             />
           </div>
@@ -163,6 +178,26 @@
               src="img/chara-fond/background-2.webp"
               alt=""
             />
+            <img
+              class="chara-roi roi-portail"
+              src="img/chara-roi/roi-portail.webp"
+              alt=""
+            />
+            <img
+              class="chara-roi roi-mad"
+              src="img/chara-roi/roi-chara.webp"
+              alt=""
+            />
+            <img
+              class="chara-roi roi-castle"
+              src="img/chara-roi/roi-castle.webp"
+              alt=""
+            />
+            <img
+              class="chara-roi roi-spacer"
+              src="img/chara-roi/roi-spacer.webp"
+              alt=""
+            />
           </div>
           <div class="screen screen-3">
             <img
@@ -170,11 +205,41 @@
               src="img/chara-fond/background-3.webp"
               alt=""
             />
+            <img
+              class="chara-baron baron-mad"
+              src="img/chara-baron/baron-chara.webp"
+              alt=""
+            />
+            <img
+              class="chara-baron baron-ville"
+              src="img/chara-baron/baron-town.webp"
+              alt=""
+            />
+            <img
+              class="chara-baron baron-claude"
+              src="img/chara-baron/claude-chara.webp"
+              alt=""
+            />
           </div>
           <div class="screen screen-4">
             <img
               class="scroll-ysa screen-bg"
               src="img/chara-fond/background-4.webp"
+              alt=""
+            />
+            <img
+              class="chara-epee epee-spacer"
+              src="img/chara-epee/epee-spacer.webp"
+              alt=""
+            />
+            <img
+              class="chara-epee epee-mad"
+              src="img/chara-epee/epee-chara.webp"
+              alt=""
+            />
+            <img
+              class="chara-epee epee-portail"
+              src="img/chara-epee/epee-portail.webp"
               alt=""
             />
           </div>
