techniquement terminé, manque animation scroll horizontal

--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,11 @@
               src="img/chara-ysa/ysa-spacer.webp"
               alt=""
             />
+            <img
+              class="chara-ysa ysa-txt"
+              src="img/chara-ysa/ysa-txt.webp"
+              alt=""
+            />
           </div>
           <div class="screen screen-2">
             <img
@@ -198,6 +203,11 @@
               src="img/chara-roi/roi-spacer.webp"
               alt=""
             />
+            <img
+              class="chara-roi roi-txt"
+              src="img/chara-roi/arthur-txt.webp"
+              alt=""
+            />
           </div>
           <div class="screen screen-3">
             <img
@@ -218,6 +228,11 @@
             <img
               class="chara-baron baron-claude"
               src="img/chara-baron/claude-chara.webp"
+              alt=""
+            />
+            <img
+              class="chara-baron baron-txt"
+              src="img/chara-baron/baron-txt.webp"
               alt=""
             />
           </div>
@@ -242,6 +257,11 @@
               src="img/chara-epee/epee-portail.webp"
               alt=""
             />
+            <img
+              class="chara-epee epee-txt"
+              src="img/chara-epee/épée-txt.webp"
+              alt=""
+            />
           </div>
         </div>
       </div>
@@ -257,7 +277,12 @@
               »). Le roi Arthur, celui de la légende ? Un vieil ivrogne décrépit
               qui passe ses journées vautré sur son trône.
             </p>
-            <a class="buy-button" href=""> Vers la boutique </a>
+            <a
+              class="buy-button"
+              href="https://www.dargaud.com/bd/furieuse-bda5430320"
+            >
+              Vers la boutique
+            </a>
           </div>
           <div class="col-6">
             <img class="buy-livre" src="img/livre/livre-furieuse.webp" alt="" />
@@ -268,14 +293,47 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-4">
+          <div class="col-12">
             <img
               class="footer-logo"
               src="img/footer/footer-dargaud-logo.webp"
               alt=""
             />
-            <a class="footer-links" href="">CONDITIONS GÉNÉRALES </a>
-            <a class="footer-links" href="">POLITIQUE DE CONFIDENTIALITÉ</a>
+            <div class="col-12">
+              <a class="footer-links footer-link-1" href=""
+                >CONDITIONS GÉNÉRALES
+              </a>
+              <div class="social-cont">
+                <a class="footer-links footer-link-2" href=""
+                  >POLITIQUE DE CONFIDENTIALITÉ</a
+                >
+                <a class="footer-links footer-link-news" href="">NEWSLETTER</a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <p class="footer-politics-txt">
+                  Furieuse 2023 - All rights reserved
+                </p>
+                <div class="col-2">
+                  <div class="social">
+                    <a href=""
+                      ><span
+                        ><img
+                          src="img/footer/footer-facebook.svg"
+                          alt="" /></span
+                    ></a>
+                    <a href=""
+                      ><span><img src="img/footer/footer-x.svg" alt="" /></span
+                    ></a>
+                    <a href=""
+                      ><span
+                        ><img src="img/footer/footer-insta.svg" alt="" /></span
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
